# stock-classroom

./: .gitignore  AGENTS.md  README.md  _create_kw.py  desktop_app.py  pyproject.toml  requirements.txt  run_desktop.py  run_server.py  start_desktop.bat
backend/: akshare_source.py  app.py  cache_modules.py  data_lhb.py  data_manager.py  indicators.py
backend/configs/: default_scorecard.json  settings.json
backend/factor_engine/: __init__.py  calculator.py  config.py  dsl.py  filters.py  models.py  scorer.py
docs/: 2026-07-08.md  ARCHITECTURE.md  README.md  SESSION_PROMPT.md  TECH_MANUAL.md  选股体系-数据需求梳理.md
docs/数据字典/: akshare数据字典.md  接口清单.txt  更新接口一览.txt  概念和行业板块.txt  索引-按选股流程分类.md  资金流向.txt  龙虎榜.txt
frontend/: cyq_calculator.js  kline_widget.py
frontend/_archive/: kline_chart_v2.py  kline_chart_v3.py  secret-room.html  strategy_engine.py
frontend/panels/: dc_panel.py  holdings_panel.py  local_worker.py  market_panel.py  picks_panel.py
frontend/platform/: local_worker.py  log_window.py  platform_shell.py  plugin_base.py  plugin_manager.py  theme.py
frontend/plugins/: plugins.json
frontend/plugins/agent/: chat_window.py  chat_worker.py  config.py  llm_client.py  plugin.py
frontend/plugins/datacenter/: companion.py  panel.py  plugin.py
frontend/plugins/datapipeline/: companion.py  panel.py  plugin.py  worker.py
frontend/plugins/holdings/: panel.py  plugin.py
package/: build.bat  build_desktop.bat  run.py  run_desktop.py
scripts/: README.md  daily_maintenance.py  daily_stock_update.xml  update_daily.bat  update_daily.ps1
(+9 files in other folders)
